--- a/tmux.conf
+++ b/tmux.conf
@@ -9,7 +9,7 @@ set -g default-terminal screen-256color
 set -g history-limit 10000
 
 set -g allow-rename off
-set-window-option -g automatic-rename off
+set-window-option -g automatic-rename on
 
 set-window-option -g mode-keys vi
 set -g status-keys vi
@@ -33,13 +33,16 @@ bind -r l select-pane -R  # move right
 bind > swap-pane -D       # swap current pane with the next one
 bind < swap-pane -U       # swap current pane with the previous one
 
+bind -n C-Left  previous-window
+bind -n C-Right  next-window
 bind Tab last-window        # move to last active window
 
+bind -r F12 setw synchronize-panes
+
 # Enable mouse mode (tmux 2.1 and above)
-set -g mouse on
+set -g mouse off
 
 # -- display --
-
 set -g set-titles on                        # set terminal title
 set -g set-titles-string '#h | #S | #I #W'
 
@@ -112,19 +115,20 @@ set -g status-bg colour245
 set -g status-fg colour238
 set -g status-attr dim
 set -g status-left ''
-set -g status-right '#[fg=colour238,bg=colour245,bold] #h %Y-%m-%d %H:%M:%S'
+set -g status-right '#[fg=colour232,bg=colour245,bold] #h %Y-%m-%d %H:%M:%S'
 set -g status-right-length 50
 set -g status-left-length 20
 
 setw -g window-status-current-fg white
-setw -g window-status-current-bg colour38
+setw -g window-status-current-bg colour4
 setw -g window-status-current-attr bold
-setw -g window-status-current-format '#I:#W#F '
+setw -g window-status-current-format ' #I:#W#F '
 
-setw -g window-status-fg colour238
+setw -g window-status-fg colour232
 setw -g window-status-bg colour245
 setw -g window-status-attr none
-setw -g window-status-format ' #I#[fg=colour38]:#[fg=colour38]#W#[fg=colour244]#F '
+#setw -g window-status-format ' #I#[fg=colour38]:#[fg=colour38]#W#[fg=colour244]#F '
+setw -g window-status-format ' #I:#W#F '
 
 setw -g window-status-bell-attr bold
 setw -g window-status-bell-fg colour255
